# lab2

./: CMakeLists.txt  readme.md
cli/: interface.h
include/Base/: DynamicArray.h  LinkedList.h
include/Sequences/: AdaptiveSequence.h  ArraySequence.h  ArraySequenceBuilder.h  ListSequence.h  Sequence.h  SequenceEnumerator.h  SequenceFunctions.h
include/Specialized/: BitSequence.h
tests/: test_sequence.cpp
